--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Please note that 8 pages is a hard upper limit on length. Grading on project wil
 Slightly modified NIPS style file and example atex
 (<a href="assign/nips_2016.sty">sty</a>)
 (<a href="assign/nips_2016.tex">tex</a>)<br>
-Course grades: will be based <b>60%</b> on 3 assignments (20% each), <b>40%</b> grade depends on final project.</dd>
+Course grades: will be based <b>60%</b> on 3 assignments, <b>40%</b> depends on final project.</dd>
 
 <dt> Homework Assignments </dt>
 	The assignments are to be done by each student individually.  You may discuss the general idea of the questions with anyone you like, but your discussion may not include the specific answers to any of the problems.
