--- a/syllabus.html
+++ b/syllabus.html
@@ -39,7 +39,7 @@
   <b>Time and Location</b>:
   Monday, Wednesday 11:50am - 1:10pm, <a href="https://goo.gl/maps/6YLndu7uCy42">GHC 4401 Rashid Auditorium</a><br />
   <strong>Class Videos</strong>:
-    Class videos will be available <a href="./syllabus.html">TBD</a></p>
+    Class videos will be available <a href="https://scs.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx#folderID=%22b3b04cc6-ee56-4b91-9d90-ae1d01339463%22">Panopto</a></p>
 
 <br>
 </div>
