--- a/calendar.html
+++ b/calendar.html
@@ -44,7 +44,7 @@
     <h3>Course Calendar and Office Hours</h3>
     </p>
     <div>
-    <iframe src="https://calendar.google.com/calendar/embed?title=10707%20Deep%20Learning%20Spring%202019%20Calendar&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=1c1a7bfp5r1ioolonjp4gdqftk%40group.calendar.google.com&amp;color=%23853104&amp;ctz=America%2FNew_York" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=c_9g0iqbqcl3lgoqg69d930iqdn0%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
     <div>
     </div>
