--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Course grades: will be based <b>60%</b> on 3 assignments, <b>40%</b> depends on 
 	The assignments are to be done by each student individually.  You may discuss the general idea of the questions with anyone you like, but your discussion may not include the specific answers to any of the problems.
 
 <dt>Submitting Assignments</dt>
-<dd> Assignments will be submitted through <a href="https://gradescope.com/">Gradescope</a>. Additionally, you should upload your code to Autolab. <br> Writeups should be typeset in Latex and should be submitted in pdf form. <br> All code should be submitted with a README file with instructions on how to execute your code. <br> You will receive an invite to Gradescope for 10707 Deep Learning Spring 2019 by 01/21/2019. Login via the invite, and submit the assignments on time. If you have not received an invite, please post a private message on Piazza.</dd>
+<dd> Assignments will be submitted through <a href="https://gradescope.com/">Gradescope</a>. Additionally, you should upload your code to Autolab. <br> Writeups should be typeset in Latex and should be submitted in pdf form. <br> All code should be submitted with a README file with instructions on how to execute your code. <br> You will receive an invite to Gradescope for 10707 Deep Learning. Login via the invite, and submit the assignments on time. If you have not received an invite, please post a private message on Piazza.</dd>
 
 
 <h3>Marking</h3>
@@ -289,11 +289,6 @@ Matters of marking on tests and exams should be taken to the professor.
 Homeworks: Each student will have a total of 5 grace days that a student may choose to apply
 to the homework assignments. No more than 3 grace days can be used on any single assignment.
 <b> NOTE: Any assignment submitted more than 3 days past the deadline will get zero credit.</b>
-<br>
-Projects: Each team will be given a total of 3 grace days on the project (can be split between
-project proposals and final reports).
-Unused grace days from homeworks CANNOT be applied to the project.
-<b> NOTE: Projects submitted more than 3 days past the deadline will get zero credit.</b>
 <br>
 
 <h4 id="extensions">Extensions</h4>
