--- a/syllabus.html
+++ b/syllabus.html
@@ -60,9 +60,8 @@
      <br>Introduction to Machine Learning, Regression </br>
     </td>
     <td>
-    <b>Reading:</b> Bishop: Chapter 1, Chapter 3: 3.1-3.2 <br> Deep Learning Book: Chapters 4 and 5.
-    </br>
-      Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture1_2019.pdf">pdf</a>]
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
     </td>
   </tr>
   <tr>
@@ -72,9 +71,8 @@
     <br>Continue Introduction to Machine Learning, Regression. </br>
     </td>
     <td>
-    <b>Reading:</b> Bishop: Chapter 1, Chapter 3: 3.1-3.2<br>
-    Deep Learning Book: Chapters 4 and 5. <br>
-      Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture3_2019.pdf">pdf</a>]
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
     </td>
   </tr>
   <tr>
@@ -84,9 +82,8 @@
     Neural Networks I
     </td>
     <td>
-    <b>Reading:</b> Bishop: Chapter 2, sec. 2.1-2.4 <br>
-    Deep Learning Book: Chapter 3 <br>
-      Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_NN_Part1.pdf">pdf</a>]
+    <b>Reading:</b> TBD <br>
+    Class Notes [<a href="./syllabus.html">TBD</a>]
     </td>
   </tr>
 
@@ -96,9 +93,8 @@
     <td>
     Neural Networks II </td>
     <td>
-    <b>Reading:</b> Bishop, Chapter 5: sec. 5.1 - 5.4  <br>
-    Deep Learning Book: Chapter 6 <br>
-      Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_NN_Part2.pdf">pdf</a>]
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
     </td>
   </tr>
   <tr>
@@ -108,9 +104,8 @@
     Convolutional Neural Networks I
     </td>
     <td>
-    <b>Reading:</b> Bishop, Bishop Chapter 5, sec. 5.1 - 5.4   <br>
-    Deep Learning Book: Chapter 7 <br>
-      Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_Conv1_2019.pdf">pdf</a>]
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
     </td>
   </tr>
   <tr>
@@ -121,8 +116,8 @@
       Start Graphical Models
     </td>
     <td>
-    <b>Reading:</b> Deep Learning Book: Chapter 9 <br>
-      Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_Conv2_2019.pdf">pdf</a>]
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
     </td>
   </tr>
    <tr>
@@ -132,8 +127,8 @@
 	Graphical Models: Directed Graphs
 	</td>
 	<td>
-	<b>Reading </b>: Deep Learning Book: Chapter 9 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_GM_2019.pdf">pdf</a>]
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
     </tr>
     <tr>
@@ -143,8 +138,8 @@
 	Graphical Models, Undirected Graphs /RBMs
 	</td>
 	<td>
-	<b>Reading:</b> Bishop, Chapter 8 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_GM_2019.pdf">pdf</a>]
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
     </tr>
     <tr>
@@ -153,8 +148,9 @@
 	<td>
 	  Deep Belief Networks
 	</td>
-	<td> <b>Reading:</b> Bishop, Chapter 8 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_DBN.pdf">pdf</a>]
+	<td>
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -163,8 +159,9 @@
 	<td>
 	Autoencoders
 	</td>
-	<td> <b>Reading:</b> Deep Learning Book, Chapter 14 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_Autoencoder_2019.pdf">pdf</a>]
+	<td>
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -173,8 +170,9 @@
 	<td>
 	Sparse Coding
 	</td>
-	<td> <b>Reading:</b> Deep Learning Book, Chapter 13 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_SparseCoding_2019.pdf">pdf</a>]
+	<td>
+    <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -192,8 +190,8 @@
 	<td>
 	Language Modeling.
 	</td>
-	<td>  <b> Reading:</b> Deep Learning Book, Chapters 10, 12.4 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_Language_2019.pdf">pdf</a>]
+	<td>  <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
   </tr>
 <tr>
@@ -220,8 +218,8 @@
 	<td>
 	Sequence to Sequence Models, Part 1
 	</td>
-	<td>  <b>Reading:</b> Deep Learning Book, Chapter 10 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_Seq2Seq1_2019.pdf">pdf</a>]
+	<td>  <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -230,8 +228,8 @@
 	<td>
 	Sequence to Sequence Models, Part 2
 	</td>
-	<td>  <b>Reading:</b> Deep Learning Book, Chapter 10 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_Seq2Seq2_2019.pdf">pdf</a>]
+	<td>  <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -240,8 +238,8 @@
 	<td>
 	Variational Inference
 	</td>
-	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20.3 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_Variational_Inference_2019.pdf">pdf</a>]
+	<td>  <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -250,8 +248,8 @@
 	<td>
 	Variational Autoencoder
 	</td>
-	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20.3 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_VAE_2019.pdf">pdf</a>]
+	<td>  <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -260,7 +258,7 @@
 	<td>
 	Markov Chain Monte Carlo
 	</td>
-	<td>  <b>Reading:</b> Deep Learning Book, Chapter 19 <br>
+	<td>  <b>Reading:</b> TBD <br>
 	Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -270,9 +268,8 @@
 	<td>
 	Deep Boltzmann Machines
 	</td>
-	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20 <br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_DBM_part1.pdf">pdf1</a>
-  <a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_DBM_part2.pdf">pdf2</a>]
+	<td>  <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -282,8 +279,8 @@
     Generative Adversarial Networks <br>
     Normalizing Flows
 	</td>
-	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20.4-20.6<br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_GAN_2019.pdf">pdf</a>]
+	<td>  <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -301,8 +298,8 @@
 	<td>
 	  Representation Learning for Reading Comprehension
 	</td>
-	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20.10<br>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_reading_comp.pdf">pdf</a>]
+	<td>  <b>Reading:</b> TBD <br>
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -312,7 +309,7 @@
 	Integrating Domain-Knowledge into Deep Learning
 	</td>
 	<td>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_domain.pdf">pdf</a>]
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
@@ -341,7 +338,7 @@
 	Attention Models for Video Understanding
 	</td>
 	<td>
-	Class Notes [<a href="https://www.cs.cmu.edu/~rsalakhu/10707/Lectures/Lecture_Attention.pdf">pdf</a>]
+      Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
     <tr>
