--- a/syllabus.html
+++ b/syllabus.html
@@ -61,7 +61,7 @@
     </td>
     <td>
     <b>Reading:</b> TBD <br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1vkzO_T0hg4ffKRol0piZ-_TuhUpcdX6v/view?usp=sharing">Lecture 1</a>]
     </td>
   </tr>
   <tr>
