--- a/index.html
+++ b/index.html
@@ -286,9 +286,12 @@ Matters of marking on tests and exams should be taken to the professor.
 <div class="container">
 <h3 id="6-general-policies">General Policies</h3>
 <h4> Grace Day/Late Homework Policy </h4>
-Homeworks: Each student will have a total of 5 grace days that a student may choose to apply
+<b>Homeworks</b>: Each student will have a total of 5 grace days that a student may choose to apply
 to the homework assignments. No more than 3 grace days can be used on any single assignment.
-<b> NOTE: Any assignment submitted more than 3 days past the deadline will get zero credit.</b>
+<b> NOTE: Any assignment submitted more than 3 days past the deadline will get zero credit.</b><br>
+<b>Projects</b>: Each team will be given a total of 3 grace days on the project (can be split between project proposals and final reports).
+Unused grace days from homeworks CANNOT be applied to the project or vice versa.
+<b> NOTE: Projects submitted more than 3 days past the deadline will get zero credit. </b>
 <br>
 
 <h4 id="extensions">Extensions</h4>
