--- a/syllabus.html
+++ b/syllabus.html
@@ -60,7 +60,8 @@
      <br>Introduction to Machine Learning, Regression </br>
     </td>
     <td>
-    <b>Reading:</b> TBD <br>
+      <b>Reading:</b> Bishop: Chapter 1, Chapter 3: 3.1-3.2 <br>
+      Deep Learning Book: Chapters 4 and 5.<br>
       Class Notes [<a href="https://drive.google.com/file/d/1vkzO_T0hg4ffKRol0piZ-_TuhUpcdX6v/view?usp=sharing">Lecture 1</a>]
     </td>
   </tr>
@@ -71,8 +72,9 @@
     <br>Continue Introduction to Machine Learning, Regression. </br>
     </td>
     <td>
-    <b>Reading:</b> TBD <br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+    <b>Reading:</b> Bishop: Chapter 1, Chapter 3: 3.1-3.2 <br>
+      Deep Learning Book: Chapters 4 and 5.<br>
+      Class Notes [<a href="https://drive.google.com/file/d/1vkzO_T0hg4ffKRol0piZ-_TuhUpcdX6v/view?usp=sharing">Lecture 2</a>]
     </td>
   </tr>
   <tr>
@@ -82,8 +84,9 @@
     Neural Networks I
     </td>
     <td>
-    <b>Reading:</b> TBD <br>
-    Class Notes [<a href="./syllabus.html">TBD</a>]
+    <b>Reading:</b> Bishop, Chapter 5: sec. 5.1 - 5.4 <br>
+    Deep Learning Book: Chapter 6 <br>
+    Class Notes [<a href="https://drive.google.com/file/d/13xEn7b97x7iH64hY9kp61K1VD4Najxr9/view?usp=sharing">Lecture 3</a>]
     </td>
   </tr>
 
@@ -93,8 +96,9 @@
     <td>
     Neural Networks II </td>
     <td>
-    <b>Reading:</b> TBD <br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+    <b>Reading:</b> Bishop, Bishop Chapter 5, sec. 5.1 - 5.4 <br>
+    Deep Learning Book: Chapter 7 <br>
+      Class Notes [<a href="https://drive.google.com/file/d/1ciLeRCG--5IHaxjYP1gEOi_fLzN7S7sg/view?usp=sharing">Lecture 4</a>]
     </td>
   </tr>
   <tr>
@@ -104,8 +108,8 @@
     Convolutional Neural Networks I
     </td>
     <td>
-    <b>Reading:</b> TBD <br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+    <b>Reading:</b> Deep Learning Book: Chapter 9<br>
+      Class Notes [<a href="https://drive.google.com/file/d/1ExH0OUMX1-FzkX8MKCUOUlCEsc6bLL0N/view?usp=sharing">Lecture 5</a>]
     </td>
   </tr>
   <tr>
@@ -116,8 +120,8 @@
       Start Graphical Models
     </td>
     <td>
-    <b>Reading:</b> TBD <br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+    <b>Reading:</b> Deep Learning Book: Chapter 9<br>
+      Class Notes [<a href="https://drive.google.com/file/d/1L3HxVDhNkw5rbzon_0BHrcDholnvoNKg/view?usp=sharing">Lecture 6</a>]
     </td>
   </tr>
    <tr>
@@ -127,7 +131,7 @@
 	Graphical Models: Directed Graphs
 	</td>
 	<td>
-    <b>Reading:</b> TBD <br>
+    <b>Reading:</b> Bishop, Chapter 8<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
     </tr>
@@ -138,7 +142,7 @@
 	Graphical Models, Undirected Graphs /RBMs
 	</td>
 	<td>
-    <b>Reading:</b> TBD <br>
+    <b>Reading:</b> Bishop, Chapter 8<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
     </tr>
@@ -149,7 +153,7 @@
 	  Deep Belief Networks
 	</td>
 	<td>
-    <b>Reading:</b> TBD <br>
+    <b>Reading:</b> Reading: Deep Learning Book, Chapter 20.3<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -160,7 +164,7 @@
 	Autoencoders
 	</td>
 	<td>
-    <b>Reading:</b> TBD <br>
+    <b>Reading:</b> Deep Learning Book, Chapter 14<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -171,7 +175,7 @@
 	Sparse Coding
 	</td>
 	<td>
-    <b>Reading:</b> TBD <br>
+    <b>Reading:</b> Deep Learning Book, Chapter 13<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -190,7 +194,7 @@
 	<td>
 	Language Modeling.
 	</td>
-	<td>  <b>Reading:</b> TBD <br>
+	<td>  <b>Reading:</b> Deep Learning Book, Chapters 10, 12.4<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
   </tr>
@@ -218,7 +222,7 @@
 	<td>
 	Sequence to Sequence Models, Part 1
 	</td>
-	<td>  <b>Reading:</b> TBD <br>
+	<td>  <b>Reading:</b> Deep Learning Book, Chapter 10<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -228,7 +232,7 @@
 	<td>
 	Sequence to Sequence Models, Part 2
 	</td>
-	<td>  <b>Reading:</b> TBD <br>
+	<td>  <b>Reading:</b> Deep Learning Book, Chapter 10<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -238,7 +242,7 @@
 	<td>
 	Variational Inference
 	</td>
-	<td>  <b>Reading:</b> TBD <br>
+	<td>  <b>Reading:</b> Deep Learning Book, Chapter 19<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -248,7 +252,7 @@
 	<td>
 	Variational Autoencoder
 	</td>
-	<td>  <b>Reading:</b> TBD <br>
+	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -258,7 +262,7 @@
 	<td>
 	Markov Chain Monte Carlo
 	</td>
-	<td>  <b>Reading:</b> TBD <br>
+	<td>  <b>Reading:</b> <br>
 	Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -268,7 +272,7 @@
 	<td>
 	Deep Boltzmann Machines
 	</td>
-	<td>  <b>Reading:</b> TBD <br>
+	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20.4-20.6<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
@@ -279,7 +283,7 @@
     Generative Adversarial Networks <br>
     Normalizing Flows
 	</td>
-	<td>  <b>Reading:</b> TBD <br>
+	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20.10<br>
       Class Notes [<a href="./syllabus.html">TBD</a>]
 	</td>
      </tr>
