updated for imac

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Deep Reinforcement Learning.
     March 18: 3-page Midway report on the class project <br>
     April 27, final projects are due, 8-pages <br>
 <dt> Requirements </dt>
-For projects, you may work in teams of 2-3 people.
+For projects, you work in teams of <b>2 people</b>.
 
 Project info sheet
 <a href ="./index.html">TBD</a>.
