updated for imac

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Deep Reinforcement Learning.
 For projects, you work in teams of <b>2 people</b>.
 
 Project info sheet
-<a href ="./index.html">TBD</a>.
+<a href ="./S22_10707_Project_Report_Requirements.pdf">PDF</a>.
 <!--<a href = https://deeplearning-cmu-10707-2022spring.github.io/project.pdf>pdf</a>.-->
 <br>
 Slightly modified NIPS style file and example paper for latex
