--- a/syllabus.html
+++ b/syllabus.html
@@ -132,7 +132,7 @@
 	</td>
 	<td>
     <b>Reading:</b> Bishop, Chapter 8<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1SZXZuon0oITLrWVYXGIxT1SjO9u_T6CL/view?usp=sharing">Lecture 7</a>]
 	</td>
     </tr>
     <tr>
@@ -143,7 +143,7 @@
 	</td>
 	<td>
     <b>Reading:</b> Bishop, Chapter 8<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1SZXZuon0oITLrWVYXGIxT1SjO9u_T6CL/view?usp=sharing">Lecture 8</a>]
 	</td>
     </tr>
     <tr>
@@ -154,7 +154,7 @@
 	</td>
 	<td>
     <b>Reading:</b> Reading: Deep Learning Book, Chapter 20.3<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1FXfFpI_W9o0LRAgwBXqsoJu9DHMJNBGm/view?usp=sharing">Lecture 9</a>]
 	</td>
      </tr>
     <tr>
@@ -165,7 +165,7 @@
 	</td>
 	<td>
     <b>Reading:</b> Deep Learning Book, Chapter 14<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1YY6r6WxCHGwvl86He7Ooe-ZQxTgwZgVv/view?usp=sharing">Lecture 10</a>]
 	</td>
      </tr>
     <tr>
@@ -176,7 +176,7 @@
 	</td>
 	<td>
     <b>Reading:</b> Deep Learning Book, Chapter 13<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1KnIT7bxSMNjl8MCThu-HNdm7XSu8RzMb/view?usp=sharing">Lecture 11</a>]
 	</td>
      </tr>
     <tr>
@@ -195,7 +195,7 @@
 	Language Modeling.
 	</td>
 	<td>  <b>Reading:</b> Deep Learning Book, Chapters 10, 12.4<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1v-044BFh8VjPeMXe1T522JU3Q9aAYahV/view?usp=sharing">Lecture 13</a>]
 	</td>
   </tr>
 <tr>
