updated for imac

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Deep Reinforcement Learning.
         </div>
         <div class="instructor">
           <a href="">
-            <img class="headshot" src="static/zhili.jpg" style="text-align:center;">
+            <img class="headshot" src="static/zhili.jpeg" style="text-align:center;">
             <div style="text-align:center;font-size: 90%;">Zhili Feng</div>
           </a>
         </div>
