--- a/syllabus.html
+++ b/syllabus.html
@@ -150,6 +150,18 @@
 	<td>Lecture&nbsp;9</td>
 	<td>Feb 16 </td>
 	<td>
+	  Restricted Boltzmann Machine
+	</td>
+	<td>
+    <b>Reading:</b> Reading: Deep Learning Book, Chapter 20.3<br>
+      Class Notes [<a href="">Lecture 9</a>]
+	</td>
+</tr>
+
+    <tr>
+	<td>Lecture&nbsp;10</td>
+	<td>Feb 21 </td>
+	<td>
 	  Deep Belief Networks
 	</td>
 	<td>
@@ -158,25 +170,14 @@
 	</td>
      </tr>
     <tr>
-	<td>Lecture&nbsp;10</td>
-	<td>Feb 21 </td>
+	<td>Lecture&nbsp;11</td>
+	<td>Feb 23 </td>
 	<td>
 	Autoencoders
 	</td>
 	<td>
     <b>Reading:</b> Deep Learning Book, Chapter 14<br>
       Class Notes [<a href="https://drive.google.com/file/d/1YY6r6WxCHGwvl86He7Ooe-ZQxTgwZgVv/view?usp=sharing">Lecture 10</a>]
-	</td>
-     </tr>
-    <tr>
-	<td>Lecture&nbsp;11</td>
-	<td>Feb 23 </td>
-	<td>
-	Sparse Coding
-	</td>
-	<td>
-    <b>Reading:</b> Deep Learning Book, Chapter 13<br>
-      Class Notes [<a href="https://drive.google.com/file/d/1KnIT7bxSMNjl8MCThu-HNdm7XSu8RzMb/view?usp=sharing">Lecture 11</a>]
 	</td>
      </tr>
     <tr>
