update from macbook

--- a/syllabus.html
+++ b/syllabus.html
@@ -154,7 +154,7 @@
 	</td>
 	<td>
     <b>Reading:</b> Reading: Deep Learning Book, Chapter 20.3<br>
-      Class Notes [<a href="">Lecture 9</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/18k91OXK5rLgZrs4p5qzBaRw6H_dIfE-F/view?usp=sharing">Lecture 9</a>]
 	</td>
 </tr>
 
