update from macbook

--- a/syllabus.html
+++ b/syllabus.html
@@ -187,6 +187,7 @@
 	Guest Lecture: Graph Neural Networks
 	</td>
 	<td>
+      Class Notes [<a href="https://minjiyoon.xyz/Paper/Minji_Yoon_intro_deep_graph_learning.pdf">Lecture 12</a>]
 	</td>
      </tr>
     <tr>
