updated for imac

--- a/syllabus.html
+++ b/syllabus.html
@@ -225,7 +225,7 @@
 	Sequence to Sequence Models, Part 1
 	</td>
 	<td>  <b>Reading:</b> Deep Learning Book, Chapter 10<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/11RqA1rPhlOGbYgihQ2X-skYdC86w6Vl4/view?usp=sharing">Lecture 14</a>]
 	</td>
      </tr>
     <tr>
@@ -235,7 +235,7 @@
 	Sequence to Sequence Models, Part 2
 	</td>
 	<td>  <b>Reading:</b> Deep Learning Book, Chapter 10<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/16K-OYU_30uRx4NetBCjVN5PxHUyLxg6N/view?usp=sharing">Lecture 15</a>]
 	</td>
      </tr>
     <tr>
@@ -245,7 +245,7 @@
 	Variational Inference
 	</td>
 	<td>  <b>Reading:</b> Deep Learning Book, Chapter 19<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1iDALe5cY-ThlKQ3EYa3h2wcMAh1v_xdU/view?usp=sharing">Lecture 16</a>]
 	</td>
      </tr>
     <tr>
@@ -255,7 +255,7 @@
 	Variational Autoencoder
 	</td>
 	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1TbA8C4C_xeHYpY_wQJvcYmyFllP0HuGw/view?usp=sharing">Lecture 17</a>]
 	</td>
      </tr>
     <tr>
@@ -265,7 +265,7 @@
 	Markov Chain Monte Carlo
 	</td>
 	<td>  <b>Reading:</b> <br>
-	Class Notes [<a href="./syllabus.html">TBD</a>]
+	Class Notes [<a href="https://drive.google.com/file/d/16aBoEg628iNVh5DPjAN94CLl9cUeCWL9/view?usp=sharing">Lecture 18</a>]
 	</td>
      </tr>
     <tr>
@@ -275,7 +275,7 @@
 	Deep Boltzmann Machines
 	</td>
 	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20.4-20.6<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1Wpp4ypwio6-4aijh158ooIFTy5pSd9Gz/view?usp=sharing">Lecture 19</a>]
 	</td>
      </tr>
     <tr>
@@ -286,7 +286,7 @@
     Normalizing Flows
 	</td>
 	<td>  <b>Reading:</b> Deep Learning Book, Chapter 20.10<br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1UnWe8kcUzsEmjVCSBpvX3vUN-mg4FQ3V/view?usp=sharing">Lecture 20</a>]
 	</td>
      </tr>
     <tr>
