update from macbook

--- a/syllabus.html
+++ b/syllabus.html
@@ -295,7 +295,8 @@
 	<td>
 	  Guest Lecture: Multi-Modal Learning
 	</td>
-	<td>
+  <td>
+      Class Notes [<a href="https://drive.google.com/file/d/1IkIRTQfIcp61qqW3dCYKgnpjbN0vRo-U/view?usp=sharing">Lecture 21</a>]
 	</td>
      </tr>
     <tr>
