--- a/syllabus.html
+++ b/syllabus.html
@@ -306,7 +306,7 @@
 	  Representation Learning for Reading Comprehension
 	</td>
 	<td>  <b>Reading:</b> TBD <br>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1RM27qccgkmjgRrdafi5belj1YneX3uCp/view?usp=sharing">Lecture 22</a>]
 	</td>
      </tr>
     <tr>
@@ -316,7 +316,7 @@
 	Integrating Domain-Knowledge into Deep Learning
 	</td>
 	<td>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1dGri7bELsuxTEidVwRfNuTGorbnkcMxf/view?usp=sharing">Lecture 23</a>]
 	</td>
      </tr>
     <tr>
@@ -326,7 +326,7 @@
 	 Embodied AI: Language and Perception
 	</td>
 	<td>
-	Class Notes [<a href="./syllabus.html">TBD</a>]
+	Class Notes [<a href="https://drive.google.com/file/d/1zR1uZsDQp8yZy-WrW-XUzN0bGch3sUot/view?usp=sharing">Lecture 24</a>]
 	</td>
      </tr>
     <tr>
@@ -336,6 +336,7 @@
 	 Capsules
 	</td>
 	<td>
+    Class Notes [<a href="https://drive.google.com/file/d/1uHEFWptmQVK59KdzTEY0M1aqw__Z47U5/view?usp=sharing">Lecture 25</a>]
 	</td>
      </tr>
     <tr>
@@ -345,7 +346,7 @@
 	Attention Models for Video Understanding
 	</td>
 	<td>
-      Class Notes [<a href="./syllabus.html">TBD</a>]
+      Class Notes [<a href="https://drive.google.com/file/d/1NLdV79n7mB5PV8PS7S2vi3Bag67a3lOh/view?usp=sharing">Lecture 26</a>]
 	</td>
      </tr>
     <tr>
